fix title block responsive alignment

--- a/assets/sass/components/blocks/_title.sass
+++ b/assets/sass/components/blocks/_title.sass
@@ -1,4 +1,5 @@
 .block-title
-    text-align: center
+    @include media-breakpoint-up(lg)
+        text-align: center
     .heading
         margin-bottom: 0
